--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "npx hardhat test",
-    "deploy:mumbai": "npx hardhat run scripts/deploy.js --network mumbai"
+    "deploy:polygon": "npx hardhat run scripts/deploy.ts --network polygon"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "hardhat": "^2.22.2"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "ethers": "^6.11.1"
   }
 }
