--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx hardhat test",
-    "deploy:polygon": "npx hardhat run scripts/deploy.ts --network polygon"
+    "deploy:polygon": "npx hardhat run scripts/deploy.ts --network polygon",
+    "mint": "npx hardhat run scripts/mint.ts"
   },
   "keywords": [],
   "author": "",
